syntax = "proto3";

package notification;

option go_package = "github.com/pageza/recipe-book-api-v2/proto/proto/notification;notification";

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
  string userId = 1;
  string message = 2;
}

message SendNotificationResponse {
  string status = 1;
}
